--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,8 @@
   }
 }
 
+/* Input ellipsis  */
+
 /* HTML: <div class="loader"></div> */
 .loader {
   width: 36px;
@@ -89,24 +91,38 @@
   display: grid;
   border-radius: 50%;
   background:
-    linear-gradient(0deg ,rgba(239, 236, 236, 0.5) 30%,#efecec00 0 70%,rgb(205, 201, 201) 0) 50%/8% 100%,
-    linear-gradient(90deg,rgba(239, 238, 238, 0.25) 30%,#d8d5d500 0 70%,rgba(199, 196, 196, 0.75) 0) 50%/100% 8%;
+    linear-gradient(
+        0deg,
+        rgba(239, 236, 236, 0.5) 30%,
+        #efecec00 0 70%,
+        rgb(205, 201, 201) 0
+      )
+      50%/8% 100%,
+    linear-gradient(
+        90deg,
+        rgba(239, 238, 238, 0.25) 30%,
+        #d8d5d500 0 70%,
+        rgba(199, 196, 196, 0.75) 0
+      )
+      50%/100% 8%;
   background-repeat: no-repeat;
   animation: l23 1s infinite steps(12);
 }
 .loader::before,
 .loader::after {
-   content: "";
-   grid-area: 1/1;
-   border-radius: 50%;
-   background: inherit;
-   opacity: 0.915;
-   transform: rotate(30deg);
+  content: "";
+  grid-area: 1/1;
+  border-radius: 50%;
+  background: inherit;
+  opacity: 0.915;
+  transform: rotate(30deg);
 }
 .loader::after {
-   opacity: 0.83;
-   transform: rotate(60deg);
+  opacity: 0.83;
+  transform: rotate(60deg);
 }
 @keyframes l23 {
-  100% {transform: rotate(1turn)}
+  100% {
+    transform: rotate(1turn);
+  }
 }
